<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.4</version>
    </parent>

    <groupId>org.iromu.ai</groupId>
    <artifactId>spring-ai-samples</artifactId>
    <version>${revision}${sha1}${changelist}</version>
    <packaging>pom</packaging>

    <modules>
        <module>mcp</module>
        <module>mini-chat-ui</module>
        <module>rag</module>
        <module>chat</module>
        <module>ai-gateway</module>
        <module>libs</module>
    </modules>

    <properties>
        <revision>0.0.1</revision>
        <changelist>-SNAPSHOT</changelist>
        <sha1/>

        <java.version>21</java.version>
        <spring-ai.version>1.0.0-M7</spring-ai.version>
        <sprindoc-openapi.version>2.8.6</sprindoc-openapi.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-bom</artifactId>
                <version>${spring-ai.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <repositories>
        <repository>
            <id>spring-milestones</id>
            <name>Spring Milestones</name>
            <url>https://repo.spring.io/milestone</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

</project>
